--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,22 @@ body {
 .item-wrapper {
   width: min(80%, 300px);
 }
+
+/* footwear section */
+.footwear-cta {
+  background-image: url("/assets/imgs/expert-advice-safety-footwear-resources-boot.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* .footwear-cta::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.5;
+  z-index: 1;
+} */
